# video-frame-extractor-tool

./: LICENSE  README.md
src/: CMakeLists.txt  main.cpp
